# game_of_life

./: CMakeLists.txt  README.md  main.cpp
headers/: CellItem.h  GridView.h  MainWindow.h
sources/: CellItem.cpp  GridView.cpp  MainWindow.cpp
